@@ -9,6 +9,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - bug #2938492 [display] information_schema sorting order 
 - bug #2941101 [import] import timeout when table already created and
   several data lines
+- bug #2944069 [config] Extraneus dot from dirname() when installed in root, thanks to ayanamist
 
 3.2.5.0 (2010-01-10)
 - patch #2903400 [bookmarks] Status of bookmark table, 
